Cloud Build File

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,5 @@ steps:
         echo "Hello, World!first step in Cloud Build"
         echo "This is a simple Cloud Build step using Ubuntu."
         echo "You can customize this script to run any commands you need."
+options:
+  logging: CLOUD_LOGGING_ONLY
